--- a/sample-webapp-php/manifests/deployment.yaml
+++ b/sample-webapp-php/manifests/deployment.yaml
@@ -30,3 +30,88 @@ spec:
           limits:
             memory: "32Mi"
             cpu: "100m"
+        volumeMounts:
+        - name: php-sock
+          mountPath: /var/run/php
+      - image: webapp-php:v0.1.0
+        name: app
+        env:
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: webapp-config
+              key: db.host
+        - name: DB_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: webapp-config
+              key: db.name
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: webapp-secret
+              key: db.user
+        - name: DB_PASS
+          valueFrom:
+            secretKeyRef:
+              name: webapp-secret
+              key: db.pass
+        resources:
+          requests:
+            memory: "16Mi"
+            cpu: "50m"
+          limits:
+            memory: "32Mi"
+            cpu: "100m"
+        volumeMounts:
+        - name: php-sock
+          mountPath: /var/run/php
+      volumes:
+      - name: php-sock
+        emptyDir: {}
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: db
+  name: db
+  namespace: webapp-practice
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: db
+  template:
+    metadata:
+      labels:
+        app: db
+    spec:
+      containers:
+      - image: mysql:8.0
+        name: mysql
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "250m"
+            memory: "256Mi"
+        env:
+        - name: MYSQL_ALLOW_EMPTY_PASSWORD
+          value: "yes"
+        - name: MYSQL_DATABASE
+          valueFrom:
+            configMapKeyRef:
+              name: webapp-config
+              key: db.name
+        - name: MYSQL_USER
+          valueFrom:
+            secretKeyRef:
+              name: webapp-secret
+              key: db.user
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: webapp-secret
+              key: db.pass
