--- a/creating-charts/nginx/templates/deployment.yaml
+++ b/creating-charts/nginx/templates/deployment.yaml
@@ -4,15 +4,18 @@ metadata:
   name: nginx
   labels:
     app: nginx
-  spec:
-    replicas: 1
-    selector:
-      matchLabels:
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
         app: nginx
-    template:
-      metadata:
-        labels:
-          app: nginx
-      spec:
-        containers:
-          - name: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.27.0
+          ports:
+            - containerPort: 80
