--- a/creating-charts/nginx/templates/service.yaml
+++ b/creating-charts/nginx/templates/service.yaml
@@ -5,10 +5,12 @@ metadata:
   labels:
     app: nginx
 spec:
-  type: ClusterIP
+  type: {{.Values.service.type}}
   selector:
     app: nginx
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      # port where service is listening
+      port: {{.Values.service.port}}
+      # port where container is listening
+      targetPort: {{.Values.containerPorts.http}}
